[gd_scene load_steps=10 format=2]

[ext_resource path="res://Hover_Button_Style.tres" type="StyleBox" id=1]
[ext_resource path="res://Normal_Button_Style.tres" type="StyleBox" id=2]
[ext_resource path="res://Pressed_Button_Style.tres" type="StyleBox" id=3]
[ext_resource path="res://fonts/Pixel_Button.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/Pixel_SubTitle.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/Pixel_Title.tres" type="DynamicFont" id=6]
[ext_resource path="res://GameContent/Options_Menu.gd" type="Script" id=7]

[sub_resource type="StyleBoxLine" id=1]
content_margin_top = 0.0
color = Color( 0.0745098, 0.0745098, 0.0745098, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 10

[sub_resource type="StyleBoxLine" id=2]
color = Color( 0.960784, 0.960784, 0.960784, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 10

[node name="Options_Menu" type="Node2D"]
script = ExtResource( 7 )
__meta__ = {
"_edit_horizontal_guides_": [ 389.749 ],
"_edit_vertical_guides_": [ 1474.44 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 6

[node name="Control" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -20.0
margin_top = -20.0
margin_right = 9980.0
margin_bottom = 9980.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="ColorRect" parent="CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -5000.0
margin_top = -5000.0
margin_right = -5000.0
margin_bottom = -5000.0
rect_scale = Vector2( 2, 2 )
color = Color( 0, 0, 0, 0.937255 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Close_Button" type="Button" parent="CanvasLayer/Control"]
margin_left = 768.0
margin_top = -495.0
margin_right = 953.0
margin_bottom = -385.0
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Close"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = -913.629
margin_top = -470.774
margin_right = 197.37
margin_bottom = -142.774
rect_clip_content = false
custom_fonts/normal_font = ExtResource( 6 )
bbcode_enabled = true
bbcode_text = "SUPER[color=red]CTF"
text = "SUPERCTF"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel2" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = 80.94
margin_top = -381.21
margin_right = 325.94
margin_bottom = -262.21
custom_fonts/normal_font = ExtResource( 5 )
bbcode_enabled = true
bbcode_text = ".com
"
text = ".com
"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel3" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = -912.0
margin_top = -279.0
margin_right = 371.0
margin_bottom = 555.0
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "Created by Marshall Demirjian (carshalljd)
Based on rtschutter's PureCTF

The crew
[color=gray]Captain: [color=blue]carshalljd				[color=gray]Backend Rutters:  [color=blue]PEDM
[color=gray]Frontend Sails: [color=blue]JamJar		[color=gray]Intership Relations:  [color=blue]Teho

[color=white]Special thanks to
[color=gray]rtschutter
Ammut
Izzibaby
rtschutter
Casty
Valance
Fooz
Lanzer
rhizersc
"
text = "Created by Marshall Demirjian (carshalljd)
Based on rtschutter's PureCTF

The crew
Captain: carshalljd				Backend Rutters:  PEDM
Frontend Sails: JamJar		Intership Relations:  Teho

Special thanks to
rtschutter
Ammut
Izzibaby
rtschutter
Casty
Valance
Fooz
Lanzer
rhizersc
"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel4" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = -667.626
margin_top = 107.779
margin_right = 615.37
margin_bottom = 941.78
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=gray]You
themuffinman
Auxive
r/starcraft
Godot Engine
kabbage
Kaeleeen
Dunkey
Spoonlord"
text = "You
themuffinman
Auxive
r/starcraft
Godot Engine
kabbage
Kaeleeen
Dunkey
Spoonlord"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel8" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = -386.959
margin_top = 107.779
margin_right = 896.037
margin_bottom = 941.78
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=gray]Grigoreen
Shadowbane
notjosh"
text = "Grigoreen
Shadowbane
notjosh"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel5" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = 205.458
margin_top = -140.048
margin_right = 1488.46
margin_bottom = 693.953
custom_fonts/normal_font = ExtResource( 4 )
bbcode_enabled = true
bbcode_text = "[color=white]Master Volume

Music Volume



"
text = "Master Volume

Music Volume



"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel6" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = 729.31
margin_top = 510.2
margin_right = 1166.31
margin_bottom = 586.2
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.658824, 0.658824, 0.658824, 1 )
bbcode_enabled = true
bbcode_text = "Made in Godot

"
text = "Made in Godot

"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="RichTextLabel7" type="RichTextLabel" parent="CanvasLayer/Control"]
margin_left = 420.5
margin_top = -240.727
margin_right = 857.5
margin_bottom = -164.727
custom_fonts/normal_font = ExtResource( 4 )
custom_colors/default_color = Color( 0.658824, 0.658824, 0.658824, 1 )
bbcode_enabled = true
bbcode_text = "[color=white]OPTIONS

"
text = "OPTIONS

"
scroll_active = false
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="MasterVolume_Slider" type="HSlider" parent="CanvasLayer/Control"]
margin_left = 533.26
margin_top = -137.799
margin_right = 890.26
margin_bottom = -86.799
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
value = 50.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicVolume_Slider" type="HSlider" parent="CanvasLayer/Control"]
margin_left = 533.26
margin_top = -39.184
margin_right = 890.26
margin_bottom = 11.816
custom_styles/slider = SubResource( 1 )
custom_styles/grabber_area = SubResource( 2 )
value = 50.0
rounded = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fullscreen_Button" type="Button" parent="CanvasLayer/Control"]
margin_left = 320.266
margin_top = 45.3416
margin_right = 668.266
margin_bottom = 130.342
custom_styles/hover = ExtResource( 1 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/normal = ExtResource( 2 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}
